# splashkit-core

./: .gitignore  .gitmodules  .overcommit.yml  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Gemfile  README.md  _config.yml  about.md  appveyor.yml  config.rb  index.html  setting-up-splashkit-dev.md  structure.txt
.github/: pull_request_template.md
.github/workflows/: test-linux.yml  test-macos.yml  test-windows.yml
.travis/: install.sh  run.sh  validate.sh
SplashKit_Install/: Linux_Installer  SplashKit_Install.pro  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
SplashKit_Install/SplashKit_Install/: mainwindow.cpp  resources.rc
SplashKit_Install/SplashKit_Install_Linux/: SplashKit_Install.pro  SplashKit_Install.pro.user.e9939b8  mainwindow.cpp  mainwindow.h  mainwindow.ui
SplashKit_Install/SplashKit_Install_windows/: mainwindow.ui  manifest.xml
_includes/: footer.html  head.html  navbar.html
_layouts/: default.html
_posts/: 2015-11-28-welcome-to-jekyll.markdown
_sass/: _bootstrap-custom-variables.scss
coresdk/lib/mac/: hmacsha1.c
coresdk/lib/wasm/: curl.cpp  ncurses.cpp
coresdk/lib/win_inc/ncursesw/: ncurses.h
coresdk/src/: keynote_code.cpp
coresdk/src/backend/: audio_driver.cpp  audio_driver.h  backend_types.h  concurrency_utils.h  core_driver.cpp  core_driver.h  database_driver.cpp  database_driver.h  gpio_driver.cpp  gpio_driver.h  graphics_driver.cpp  graphics_driver.h  input_driver.cpp  input_driver.h  interface_driver.cpp  interface_driver.h  interface_driver_atlas.h  json_driver.cpp  json_driver.h  logging_driver.cpp  logging_driver.h  network_driver.cpp  network_driver.h  resource_event_notifications.cpp  resource_event_notifications.h  sgBackendTypes.h  sk_input_backend.cpp  sk_input_backend.h  text_driver.cpp  text_driver.h  twitter_driver.cpp  twitter_driver.h  utility_functions.cpp  utility_functions.h  utils_driver.cpp  utils_driver.h  web_driver.cpp  web_driver.h  web_server_driver.cpp  web_server_driver.h
coresdk/src/coresdk/: animations.cpp  animations.h  audio.cpp  audio.h  basics.cpp  basics.h  bundles.cpp  bundles.h  camera.cpp  camera.h  circle_drawing.cpp  circle_drawing.h  circle_geometry.cpp  circle_geometry.h  clipping.cpp  clipping.h  collisions.cpp  collisions.h  color.cpp  color.h  database.cpp  database.h  drawing_options.cpp  drawing_options.h  ellipse_drawing.cpp  ellipse_drawing.h  game_learning.cpp  game_learning.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  images.cpp  images.h  input.cpp  input.h  interface.cpp  interface.h  json.cpp  json.h  (+72 more)
coresdk/src/emscripten_javascript/: SplashKitWasm.idl  SplashKitWasmGlueWrapper.cpp
coresdk/src/particlesystem/: particle_system.h  seasons.cpp  test_particle_streaks.cpp
coresdk/src/test/: audio_test.cpp  audio_test.hpp  resources_tests.cpp  resources_tests.h  test_animation.cpp  test_animation.hpp  test_audio.cpp  test_bundles.cpp  test_camera.cpp  test_camera_multi.cpp  test_camera_single.cpp  test_cave_escape.cpp  test_database.cpp  test_database.hpp  test_geometry.cpp  test_graphics.cpp  test_graphics.hpp  test_input.cpp  test_input.hpp  test_json.cpp  test_logging.cpp  test_machine_learning.cpp  test_main.cpp  test_main.h  test_matrix.cpp  test_networking.cpp  test_particle_system.cpp  test_physics.cpp  test_raspi_gpio.cpp  test_raspi_spi.cpp  test_resources.cpp  test_serial.cpp  test_shape_drawing.cpp  test_sprites.cpp  test_tcp_networking.cpp  test_terminal.cpp  test_text.cpp  test_text.hpp  test_timers.cpp  test_timers.hpp  (+7 more)
coresdk/src/test/Resources/: iris_test.txt  iris_training.txt  iris_validation.txt
coresdk/src/test/Resources/animations/: kermit.txt  (+2 more)
coresdk/src/test/splashkit-test-generator/: README.md  main.rb
coresdk/src/test/splashkit-test-generator/data/language_files/cpp/: CMakeLists.txt
coresdk/src/test/translator/: translator_test_main.cpp
coresdk/src/test/unit_tests/: unit_test_audio.cpp  unit_test_bitmap.cpp  unit_test_geometry.cpp  unit_test_json.cpp  unit_test_main.cpp  unit_test_matrix.cpp  unit_test_music.cpp  unit_test_network.cpp  unit_test_sound_effect.cpp  unit_test_sprites.cpp  unit_test_text.cpp  unit_test_triangle.cpp  unit_test_utilities.cpp  unit_test_web_server.cpp
data/: code_snippets.yml
docs/: getting_started.md  index.md
downloads/: index.md
helpers/: code_snippet.rb  sitemap_page_title.rb
languages/cpp/: splashkit_starter.cpp  splashkit_starter.h
projects/Xcode/ScriptedAction/: main.cpp
projects/Xcode/SimpleWebService/: main.cpp
projects/Xcode/splashkit.xcodeproj/: project.pbxproj
projects/Xcode/splashkit.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/bash/: build-linux.sh  build-mac.sh  build-win32-dlls.sh  build-win32.sh  build-win64-dlls.sh  build-win64.sh
projects/cmake/: CMakeLists.txt  clean.sh
projects/waterfall_example/: CMakeLists.txt  waterfall_demonstration.cpp
source/: getting-started.md.erb  index.html.erb  test.html.md
source/javascripts/: vendor.js
source/layouts/: layout.erb
source/stylesheets/: main.scss
source/stylesheets/modules/: _colors.scss  _typography.scss
source/stylesheets/partials/: _anchor.scss  _body.scss  _code-snippet.scss  _footer.scss
stylesheets/: main.scss
tools/scripts/: .gitignore  deploy-website.sh  deploy.sh  generateWebIDLBindings.py  install-win-libraries.sh
tools/scripts/cmake/libsplashkit/: CMakeLists.txt  clean.sh  test.cpp
tools/scripts/cmake/splashkit-csharp/: CMakeLists.txt  clean.sh
tools/scripts/cmake/splashkit-python/: CMakeLists.txt
tools/scripts/cmake/splashkitcpp/: CMakeLists.txt
tools/scripts/cmake/splashkitpas/: CMakeLists.txt
tools/scripts/debian/: README.md  build-deb.sh  control  copyright  splashkit.h
tools/scripts/deploy/libsplashkit/: CMakeLists.txt
tools/scripts/deploy/splashkitcpp/: CMakeLists.txt
tools/scripts/nuget-pkg/: SplashKit.cs  SplashKitSDK.csproj  download-libraries.sh  readme.md  splashkit.csproj
tools/scripts/pacman/: PKGBUILD  README.md  mingw-w64-x86_64-splashkit-1.0.0-1-x86_64.pkg.tar.zst
tools/scripts/test/: NuGet.config  Program.cs  test.csproj
(+100 files in other folders)
